# ackermann_multiagent_ros2

./: .gitattributes  .gitignore
ackermann_vehicle_description/: CMakeLists.txt  package.xml
ackermann_vehicle_description/launch/: ackermann_display.launch.py  ackermann_rviz.launch.py
ackermann_vehicle_description/urdf/: em_3905_base.urdf.xacro
ackermann_vehicle_gazebo/: CMakeLists.txt  package.xml
ackermann_vehicle_gazebo/config/: ackermann_controller.yaml  controllers.yaml
ackermann_vehicle_gazebo/launch/: ackermann_gazebo.launch.py
vehice_controllers/: package.xml  setup.cfg  setup.py
vehice_controllers/vehice_controllers/: joint_controller_plotter.py  odom_comparer.py  steering_controller_plotter.py
vehicle_controller/: package.xml  setup.cfg  setup.py
vehicle_controller/launch/: ackermann_controller.launch.py
vehicle_controller/trajectories/: baylands_nurbs.csv  baylands_nurbs_01.csv  baylands_nurbs_02.csv  baylands_nurbs_03.csv  baylands_nurbs_04.csv
vehicle_controller/vehicle_controller/: ackermann_mpc.py  mpc_debug_visualizer.py  topp.py  trayectory_publisher.py
vehicle_gazebo/: CMakeLists.txt  package.xml
vehicle_gazebo/config/: ackermann_drive_controller.yaml  ackermann_ekf.yaml  ackermann_low_level.yaml  complementary_filter.yaml  madgwick_filter.yaml  sensor_fusion.yaml
vehicle_gazebo/include/vehicle_gazebo/: drift_corrector.py  gps_covariance_republisher.py  imu_covariance_republisher.py  mag_republisher.py  odom_comparer.py  odom_covariance_republisher.py  odometry_fusion.py
vehicle_gazebo/launch/: ackermann_gazebo.launch.py  ackermann_rviz.launch.py
vehicle_gazebo/models/: em_3905_base.urdf.xacro  prius.urdf.xacro  traxxas.urdf.xacro
vehicle_gazebo/src/: ackermann_low_level_controller.cpp
vehicle_gazebo/worlds/: baylands.sdf  empty.sdf
vehicle_gazebo/worlds/media/: baylandsV1.mtl  curb.mtl  leaves_metal.mtl  potholes.mtl  speedbumps.mtl
vehicle_low_level_controllers/: CMakeLists.txt  package.xml
vehicle_low_level_controllers/config/: ackermann_low_level.yaml
vehicle_webots/: CMakeLists.txt  package.xml  setup.cfg  setup.py  vehicle_webots_plugin.xml
vehicle_webots/config/: sensor_fusion.yaml  tesla.urdf
vehicle_webots/include/vehicle_webots/: CarDriver.hpp
vehicle_webots/launch/: ackermann_webots.launch.py
vehicle_webots/models/tesla/: TeslaModel3.proto
vehicle_webots/resource/: tesla.urdf
vehicle_webots/src/: CarDriver.cpp
vehicle_webots/vehicle_webots/: car_driver.py
vehicle_webots/worlds/: baylands.wbt  vehicle_world.wbt
